# EffectiveModernCPPCourse

./: .gitignore  CMakeLists.txt  main.cpp  matrix_test.cpp
10/: ex_10_1.cpp  ex_10_2.cpp  ex_10_3_chrono.cpp
11/: ex_11_1_literals.cpp  ex_11_2_filesystem.cpp  ex_11_3_concepts.cpp
6/: ex1_variadicFunctions.cpp  ex2_proxy.cpp  ex3_Mixins.cpp  ex4_MultiVector.cpp
7/: Range.h
9/: ex_9_3_Trie_3.cpp
fifth/: dynamicVector.h  ex1_Pair.cpp  ex2_staticVector.cpp  ex3_dynamicVector.cpp  staticVector.h
first/: Matrix.cpp  Matrix.h  matrix_test.cpp
fourth/: ex_4_1_templates.cpp  ex_4_2_compare.cpp  ex_4_3_selectIf.cpp
second/: Box.h  DynamicContainer.h  Ex1_StaticContainer.cpp  Ex2_StaticContainer2.cpp  MyString.h  StaticContainer.h  StaticContainer2.h  String.h
